...

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/a1"
                    style="@style/SeatPurple"
                    android:text="A1" />

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/a2"
                    style="@style/SeatPurple"
                    android:text="A2" />

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
...
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="해리 포터와 마법사의 돌" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#4E4E4E"
                    android:textSize="16sp"
                    tools:text="12000원" />
            </LinearLayout>
...
