...
                android:textColor="@color/gray_300"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_booking_seat_movie_title"
                tools:text="0원" />

            <TextView
                android:id="@+id/tv_booking_seat_select_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_movie_seat_complete_background"
...
