<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ticket"
            type="woowacourse.movie.presentation.model.Ticket" />

        <variable
            name="movie"
            type="woowacourse.movie.presentation.model.item.Movie" />

        <variable
            name="theater"
            type="woowacourse.movie.presentation.model.item.Theater" />
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/movie_select_background_color">

        <ScrollView
            android:id="@+id/seats_sv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/ticketing_info_container"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="34dp">

                <TextView
                    android:id="@+id/screen_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/movie_screen_color"
                    android:gravity="center"
                    android:paddingVertical="9dp"
                    android:text="@string/screen"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <TableLayout
                    android:id="@+id/seat_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56dp"
                    android:layout_marginBottom="20dp"
                    android:stretchColumns="*"
                    app:layout_constraintTop_toBottomOf="@id/screen_tv" />
            </LinearLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ticketing_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/movie_title_tv"
                android:text="@{movie.title}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/total_price_tv"
                app:layout_constraintEnd_toStartOf="@+id/done_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="해리 포터와 마법사의 돌" />

            <TextView
                android:id="@+id/total_price_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="@color/sit_select_total_price_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/movie_title_tv"
                app:layout_constraintStart_toStartOf="@id/movie_title_tv"
                app:layout_constraintTop_toBottomOf="@id/movie_title_tv"
                tools:text="0원" />

            <TextView
                android:id="@+id/done_btn"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:background="@drawable/background_movie_done"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>