<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.seat.SeatSelectActivity">

    <data>

        <variable
            name="movie"
            type="woowacourse.movie.domain.model.Movie" />

        <variable
            name="price"
            type="java.lang.Integer" />

        <variable
            name="eventHandler"
            type="woowacourse.movie.presentation.seat.SeatSelectEventHandler" />
    </data>

    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_200"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_screen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:background="@color/gray_700"
                android:gravity="center"
                android:paddingVertical="8dp"
                android:text="@string/screen_text"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TableLayout
                android:id="@+id/tablelayout_seats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="40dp"
                android:background="@color/white"
                app:layout_constraintBottom_toTopOf="@id/constraintlayout_confirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_screen">


                <TableRow android:layout_weight="1">

                    <TextView
                        style="@style/SeatTextStyle"
                        tools:text="A1"
                        tools:textColor="@color/purple" />

                    <TextView
                        style="@style/SeatTextStyle"
                        tools:text="A2"
                        tools:textColor="@color/purple" />

                    <TextView
                        style="@style/SeatTextStyle"
                        tools:text="A3"
                        tools:textColor="@color/purple" />

                    <TextView
                        style="@style/SeatTextStyle"
                        tools:text="A4"
                        tools:textColor="@color/purple" />
                </TableRow>

                <TableRow android:layout_weight="1">

                    <TextView
                        style="@style/SeatTextStyle"
                        tools:text="B1"
                        tools:textColor="@color/purple" />

                    <TextView
                        style="@style/SeatTextStyle"
                        tools:text="B2"
                        tools:textColor="@color/purple" />

                    <TextView
                        style="@style/SeatTextStyle"
                        tools:text="B3"
                        tools:textColor="@color/purple" />

                    <TextView
                        style="@style/SeatTextStyle"
                        tools:text="B4"
                        tools:textColor="@color/purple" />
                </TableRow>

                <TableRow android:layout_weight="1">

                    <TextView
                        style="@style/SeatTextStyle"
                        tools:text="C1"
                        tools:textColor="@color/green" />

                    <TextView
                        style="@style/SeatTextStyle"
                        tools:text="C2"
                        tools:textColor="@color/green" />

                    <TextView
                        style="@style/SeatTextStyle"
                        tools:text="C3"
                        tools:textColor="@color/green" />

                    <TextView
                        style="@style/SeatTextStyle"
                        tools:text="C4"
                        tools:textColor="@color/green" />
                </TableRow>

                <TableRow android:layout_weight="1">

                    <TextView
                        style="@style/SeatTextStyle"
                        tools:text="D1"
                        tools:textColor="@color/green" />

                    <TextView
                        style="@style/SeatTextStyle"
                        tools:text="D2"
                        tools:textColor="@color/green" />

                    <TextView
                        style="@style/SeatTextStyle"
                        tools:text="D3"
                        tools:textColor="@color/green" />

                    <TextView
                        style="@style/SeatTextStyle"
                        tools:text="D4"
                        tools:textColor="@color/green" />
                </TableRow>

                <TableRow android:layout_weight="1">

                    <TextView
                        style="@style/SeatTextStyle"
                        tools:text="E1"
                        tools:textColor="@color/blue" />

                    <TextView
                        style="@style/SeatTextStyle"
                        tools:text="E2"
                        tools:textColor="@color/blue" />

                    <TextView
                        style="@style/SeatTextStyle"
                        tools:text="E3"
                        tools:textColor="@color/blue" />

                    <TextView
                        style="@style/SeatTextStyle"
                        tools:text="E4"
                        tools:textColor="@color/blue" />
                </TableRow>
            </TableLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintlayout_confirm"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textview_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{movie.title}"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="해리 포터와 마법사의 돌" />

                    <TextView
                        android:id="@+id/textview_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.format(@string/amount_message, price)}"
                        android:textColor="@color/gray_500"
                        android:textSize="18sp"
                        tools:text="25,000원" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <Button
                    android:id="@+id/button_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/purple_200"
                    android:text="@string/confirm_text"
                    android:onClick="@{() -> eventHandler.onConfirmButtonClicked()}"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
